# weaviate_submission

./: .gitignore  README.md  pyproject.toml
src/Backend/: app.py  countries_with_wikipedia13.json  data_process.ipynb  get_data_countires_basic.py  get_data_countries_basic_demo.py  quick_demo.ipynb  quick_start.ipynb
src/Frontend/: index.html  package-lock.json  package.json  styles.css
