[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "globe_visualisation"
authors = [{name = "samir539"}]
description = "globe visualisation project using a vector database"
readme = "README.md"
dependencies = [
    "pygame == 2.5.2",
    "numpy == 1.26.4",
    "scipy == 1.13.0",
    "matplotlib == 3.8.3",
    "einops == 0.7.0",
    "tqdm == 4.66.2",
    "torch == 2.3.0", 
    "torchvision == 0.18.0",
    "torchaudio == 2.3.0",
    "ipykernel == 6.29.4",
    "weaviate-client == 4.6.3",
    "python-dotenv == 1.0.1",
    "pandas == 2.2.2",
    "Wikipedia-API == 0.6.0",
    "Django == 5.0.6",
    "Flask == 3.0.3",
    "Flask-Cors == 4.0.1",
    "seaborn == 0.13.2",
    "scikit-learn == 1.5.0 ",
    "statsmodels == 0.14.2",
    "ace == 0.3.3",
    "transformers == 4.41.2", 

]
version = "0.1.0-dev"